# FreeFermions

./: Hamiltonian.py  README.md  __init__.py  core.py  correlators.py  dynamics.py  models.py  pyproject.toml  sudden_quench.py  tools.py  verification.py
.ipynb_checkpoints/: Example - Transverse Field Ising Chain-checkpoint.ipynb  Transverse Field Ising Chain - Example-checkpoint.ipynb
examples/: Example - Transverse Field Ising Chain.ipynb  example_ising.py  example_small_system.py  quench_correlation_data.npz  quench_correlations.ipynb
