[project]
name = "FreeFermions"
version = "0.2.0"
description = "A library for free fermion quantum systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pfapack",
    "qutip",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
